color contrast fixes

--- a/web/themes/custom/myusf/sass/src/partials/_boxes.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_boxes.scss
@@ -479,7 +479,7 @@ a.right.carousel-control {
                 font-style: italic;        
                 line-height: 1.44;
                 color: $white;
-                background:$gray;
+                background:$text_gray; //$gray
                 width: 100%;
                 padding: 0.9375rem 3%;        
                 margin: -1px auto 0 auto;
