--- a/web/themes/custom/myusf/sass/src/partials/_typography.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_typography.scss
@@ -339,6 +339,12 @@ table {
 	@include media-breakpoint-down(phone) {
 		display: block;
 	}
+
+	tr {
+		th {
+			background: $dark_gray;
+		}
+	}
 }
 
 .table-non-responsive {
@@ -349,6 +355,7 @@ th {
 	line-height:1.5;
 	padding-top: 0.625rem!important;
 	padding-bottom: 0.625rem!important;
+	
 
 	&[scope="col"] {
 		text-transform: uppercase;
